<resources>
    <string name="app_name">ALI-Travel</string>
    <string name="action_settings">Settings</string>
    <string name="add_favorites">Add a favorite route</string>
    <string name="swap">Swap</string>
    <string name="search">Search</string>
    <string name="destination">Destination</string>
    <string name="departure">Departure</string>
    <string name="near_me">Near Me</string>
    <string name="modes_of_transport">Modes of Transport</string>
    <string name="choose">Choose</string>
    <string name="arrival_date">Arrival</string>
    <string name="departure_date">Departure</string>
    <string name="set_date">Set Date</string>
    <string name="no_date">No Date Set</string>
    <string name="estimated">Estimated Time: %s</string>
</resources>
