<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fromTFLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

        <AutoCompleteTextView
            android:id="@+id/fromTF"
            android:theme="@style/AppTheme.PrimaryEditTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/departure"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/toTFLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fromTFLayout"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

        <AutoCompleteTextView
            android:id="@+id/toTF"
            android:theme="@style/AppTheme.PrimaryEditTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/destination"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/swap"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_swap_horiz_black_24dp"
        android:text="@string/swap"
        android:layout_below="@+id/toTFLayout"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/search"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@color/colorBlackPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_search_black_24dp"
        android:text="@string/search"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/swap"
        android:id="@+id/radioGroup" />
        <RadioButton android:id="@+id/departure_date_radio"
            android:buttonTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_date"
            android:onClick="onRadioButtonClicked"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true" />
        <RadioButton android:id="@+id/arrival_date_radio"
            android:buttonTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_date"
            android:onClick="onRadioButtonClicked"
            android:layout_below="@+id/departure_date_radio"
            android:layout_alignParentStart="true" />
        />

</RelativeLayout>